Fix Image Occlusion content visibility

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -608,6 +608,8 @@
 			.spacedRepetition {
 				> div {
 					.spacedRepetitionContent {
+						height: 100%;
+
 						.spaced-repetition__prompt, %prompt-style {
 							color: var(--darkmode-text) !important;
 							background-color: var(--darkmode-background) !important;
